# MSEL_contour_extraction_cxx

./: 10081.cem  10081.edg  COPYING  README.md  demo_vis_io.m
MSEL_src/: CMakeLists.txt  CMakeLists.txt~  MSEL_compute_contours_from_edges_main.cxx  MSEL_compute_contours_from_img_main.cxx  dborl_edge_det_link_main.cxx
MSEL_src/MSEL_core/: CMakeLists.txt  bgld_arc.h  bgld_arc_algo.h  bgld_arc_base.h  bgld_eulerspiral.cxx  bgld_eulerspiral.h  bgld_eulerspiral_base.h  bpro1_parameters+bool-.cxx  bpro1_parameters+bpro_filepath-.cxx  bpro1_parameters+double-.cxx  bpro1_parameters+int-.cxx  bpro1_parameters+unsigned-.cxx  bpro1_parameters+vcl_string-.cxx  bpro1_parameters.cxx  bpro1_parameters.h  bpro1_process.cxx  bpro1_process.h  bsold_file_io.cxx  dbdet_CFTG.h  dbdet_EHT.h  dbdet_EMD.cxx  dbdet_EMD.h  dbdet_appearance.h  dbdet_cem_file_io.cxx  dbdet_cem_file_io.h  dbdet_contour_breaker.cxx  dbdet_contour_breaker.h  dbdet_contour_breaker_geometric_process.cxx  dbdet_contour_breaker_geometric_process.h  dbdet_contour_ranker_process.cxx  dbdet_contour_ranker_process.h  dbdet_curve_fragment_cues.cxx  dbdet_curve_fragment_cues.h  dbdet_curve_fragment_graph.h  dbdet_curve_fragment_ranker.h  dbdet_curve_model.cxx  dbdet_curve_model.h  dbdet_curvelet.cxx  dbdet_curvelet.h  dbdet_curvelet_map.cxx  (+77 more)
MSEL_src/MSEL_core/test_data/: filter_list.txt
MSEL_src/MSEL_core/test_data/filters/: filter_01.txt  filter_02.txt  filter_03.txt  filter_04.txt  filter_05.txt  filter_06.txt  filter_07.txt  filter_08.txt  filter_09.txt  filter_10.txt  filter_11.txt  filter_12.txt  filter_13.txt  filter_14.txt  filter_15.txt  filter_16.txt  filter_17.txt  filter_18.txt  filter_19.txt  filter_20.txt  filter_21.txt  filter_22.txt  filter_23.txt  filter_24.txt
MSEL_src/MSEL_core/test_data/tex/: tex.txt
util/io/: Example_Run.m  Main_Smooth_Contours.m  Main_cem2cemv.m  Rescale_images.m  add_facnode.m  add_varnode.m  construct_fac_graph_from_curve_fragments.m  contour_pb.m  convert_contours.m  det_save_cemv.m  disp_edg.m  draw_bry_contours_prune_length.m  draw_bry_contours_prune_pb.m  draw_contours.m  draw_contours_first_n.m  draw_contours_flip.m  draw_contours_prob.m  draw_contours_sorted_col.m  draw_green_contours.m  draw_multicolor_contours_prune_length.m  draw_multicolor_contours_prune_pb.m  draw_red_contours.m  init_graph.m  load_contours.m  load_contours_gt_smooth.m  load_cvlet_edg.m  load_edg.m  main_print_BSDS_contours_len_th.m  main_print_BSDS_contours_pb_th.m  main_print_multi_color_contours.m  main_rewrite_cem_diff_scale.m  main_write_edg_from_cem.m  print_GT_Multi_color_contours.m  print_Multi_color_contours_Pb.m  print_Multi_color_contours_general.m  print_Multi_color_contours_len.m  print_binary_boundaries.m  print_boundaries.m  print_pdf.m  print_sub_images.m  (+3 more)
